tests/neg/ycheck-termination-class.check
-- Warning: tests/neg/ycheck-termination-class.scala:9:16 --------------------------------------------------------------
9 |  def classLoop(r: ClassNode): Int =
  |                ^
  |                Argument of type ClassNode decreases but the type is not well-founded.
-- Error: tests/neg/ycheck-termination-class.scala:10:17 ---------------------------------------------------------------
10 |    1 + classLoop(r.next) // error
   |        ^^^^^^^^^^^^^^^^^
   |        classLoop may not terminate due to (mutually) recursive call.
